# csaprojects

./: Project_Snip.csv  README.md  Task_Snip.csv  app.py  pyproject.toml
sample-datasets/: Project_Snip.csv
