[project]
name = "csaprojects"
version = "0.1.0"
description = ""
authors = [
    {name = "Archiet Kannan",email = "archietk@zohomail.in"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
